[package]
name = "DeepsEngineNeo"
version = "0.1.0"
authors = ["rdeepak2002 <rdeepak2002@gmail.com>"]
edition = "2021"

[[bin]]
name = "DeepsEngineNeo"
path = "src/main.rs"

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
sdl2 = "0.35.2"
emscripten_main_loop = "0.1.1"
#imgui-opengl-renderer = "0.11.1"

[build-dependencies]
gl_generator = "0.5.3"
cmake = "0.1.17"
curl = "0.4.20"
